# ha-birthday-calendar

./: .flake8  .gitignore  README.md  hacs.json  pyproject.toml
.forgejo/workflows/: build-and-test.yaml
.github/workflows/: build-and-test.yaml  ci.yaml
custom_components/birthday_calendar/: __init__.py  calendar.py  config_flow.py  const.py  manifest.json  utils.py
custom_components/birthday_calendar/translations/: en.json
tests/: conftest.py  test_calendar.py  test_config_flow.py  test_standalone_logic.py
