[project]
name = "ha-birthday-calendar"
version = "0.1.0"
description = "A component for Home Assistant that creates a calendar entity from a CardDAV addressbook, extracting birthdays from contact VCards."
readme = "README.md"
requires-python = ">=3.13.2"
license = "MIT"
dependencies = [
    "aiohttp>=3.13.3",
    "vobject>=0.9.9",
]

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component>=0.13.102",
    "pytest-cov>=6.0.0",
    "mypy>=1.19.1",
    "bandit>=1.9.3",
    "pylint>=4.0.4",
    "types-vobject>=0.9.9.20250708",
    "flake8>=7.0.0",
    "ruff>=0.9.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "vobject.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["custom_components/birthday_calendar"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
